# Morphon

./: .gitignore  .zenodo.json  CHANGELOG.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  launch.py  pyproject.toml
benches/: benchmarks.rs
demo/: Cargo.toml
dev/: MORPHON-V6-additions.md  endoquilibrium-spec.md  paper-ZENODO_UPLOAD.md  paper-references-representational-drift.md
dev/Alt/: morphogenic-intelligence-concept.md
dev/Lisa/: findings-2.md  morphon for robotic.md
dev/features/: transformers.md
dev/internal/: build-and-run.md  testing.md
dev/paper-sources/: axonal-properties.md  metabolic-pruning-findings.md
dev/research/: anchor-sail-design.md
dev/specs/: coupled-oscillatory-dynamics-spec.md  temporal-sequence-processing-spec.md  temporal-sequence-processing-spec_v2.md
doc/: current_state.md
docs/: BENCHMARKS.md  MORPHON-ANCS-integration.md  MORPHON-V2-additions.md  MORPHON-V3-governed-intelligence.md  MORPHON-V4-ecological-intelligence.md  MORPHON-V5-embodied-intelligence.md  MORPHON-product-concept.md  WHAT-IT-CAN-DO.md  findings.md  knowledge-hypergraph-spec.md  morphogenic-intelligence-concept.md  morphon-oss-repo.md  pr.docx
docs/Alt/: MORPHON-product-concept.md
docs/benchmark_results/: anomaly_1774999270.json  (+1 more)
examples/: anomaly.rs  cartpole.rs  classify_3class.rs  classify_tiny.rs  cma_cartpole.rs  cma_endo.rs  cma_optimize.rs  drone.rs  learn_compare.rs  milestones.rs  mnist.rs  mnist_v2.rs  nlp_readiness.rs  shd.rs  temporal.rs  v2_validation.rs  v3_governance.rs
scripts/: aggregate_v3_kwta.py  bench.sh  mlp_eval.py  sweep_v3_kwta.sh
src/: ancs.rs  developmental.rs  diagnostics.rs  endoquilibrium.rs  epistemic.rs  field.rs  governance.rs  homeostasis.rs  hot_arrays.rs  justification.rs  learning.rs  lib.rs  limbic.rs  lineage.rs  memory.rs  morphogenesis.rs  morphon.rs  neuromodulation.rs  python.rs  resonance.rs  scheduler.rs  snapshot.rs  system.rs  topology.rs  types.rs  wasm.rs
tests/: integration_test.rs
web/: app.js  build.sh  index.html  serve.py
(+530 files in other folders)
