[package]
name = "morphon-core"
version = "4.2.0"
edition = "2024"
description = "Morphogenic Intelligence Engine — adaptive AI systems that grow, learn, and self-organize at runtime"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["parallel"]
parallel = ["rayon"]
python = ["pyo3"]
wasm = ["wasm-bindgen", "getrandom/wasm_js"]

[dependencies]
petgraph = { version = "0.7", features = ["serde-1"] }
rayon = { version = "1.10", optional = true }
rand = "0.9"
crossbeam-channel = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
pyo3 = { version = "0.25", features = ["extension-module"], optional = true }
wasm-bindgen = { version = "0.2", optional = true }
getrandom = { version = "0.3", optional = true }

[dev-dependencies]
criterion = "0.5"
cmaes = "0.2"
mnist = "0.6"

[[bin]]
name = "bench_report"
path = "src/bin/bench_report.rs"

[[bench]]
name = "benchmarks"
harness = false
