[package]
name = "morphon-demo"
version = "0.1.0"
edition = "2024"

[dependencies]
morphon-core = { path = ".." }
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.6", features = ["fs"] }
rand = "0.9"
